--- a/src/public/index.html
+++ b/src/public/index.html
@@ -14,7 +14,7 @@
     </head>
     <body>
         <div class="container">
-            <h1 class="display-4 text-center">Rate Limiting Example</h1>
+            <h1 class="display-4 text-center">Rate-limiting example</h1>
             <form>
                 <div class="form-group">
                     <p class="text-center lead" for="limit-select"
@@ -22,17 +22,22 @@
                         If you send more than that, all additional request will be blocked</p
                     >
                     <select id="limit-select" class="form-control">
-                        <option value="5">5 requests/10 sec</option>
-                        <option value="10">10 requests/10 sec</option>
-                        <option value="15">15 requests/10 sec</option>
-                        <option value="20">20 requests/10 sec</option>
+                        <option value="5">5 requests / 10 seconds</option>
+                        <option value="10">10 requests / 10 seconds</option>
+                        <option value="15">15 requests / 10 seconds</option>
+                        <option value="20">20 requests / 10 seconds</option>
                     </select>
-                    <button id="test-button" type="button" class="btn btn-primary">Send</button>
+                    <div class="d-flex justify-content-center">
+                        <button id="test-button" type="button" class="btn btn-primary">Send</button>
+                        <span id="timer" class="p-2 d-none"></span>
+                    </div>
                 </div>
             </form>
-            <div id="timer"></div>
-            <div id="result"></div>
-            <button id="reset-button" type="button" class="btn btn-primary d-none">Clear history</button>
+
+            <div class="text-center">
+                <div id="result"></div>
+                <button id="reset-button" type="button" class="btn btn-secondary btn-sm d-none">Clear history</button>
+            </div>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
         <script src="script.js"></script>
