Fixing typo, adding img to readme (#8)

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -19,7 +19,7 @@
                 <div class="form-group">
                     <p class="text-center lead" for="limit-select"
                         >The server will allow sending <b>max 10 API requests within a 10 second window</b>. <br />
-                        If you send more than that, all additional request will be blocked</p
+                        If you send more than that, all additional requests will be blocked</p
                     >
                     <select id="limit-select" class="form-control">
                         <option value="5">5 requests / 10 seconds</option>
